--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "PS270 Final Project"
-author: "Your Name Here"
+author: Carley Lane Boudreau
 description: "My final project"
 output:
   distill::distill_article:
@@ -12,3 +12,5 @@ output:
 ## Project thoughts
 
 I am interested in exploring data related to...
+
+maybe something related to laws, regulations, and/or health care (more specifically health care access)
